<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/home_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_header"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_300sdp"
            app:cardBackgroundColor="@color/lynxWhite"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/firestate" />

                <TextView
                    android:id="@+id/txt_home_title"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/system_normal"
                    android:textColor="@color/textColor" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_alarm"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/lynxWhite"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toStartOf="@+id/card_wire_break"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_header">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_red_alarm" />

            <TextView
                android:id="@+id/txt_home_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/alarm"
                android:textColor="@android:color/black"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_wire_break"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/lynxWhite"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toStartOf="@+id/card_fault"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_alarm"
            app:layout_constraintTop_toBottomOf="@id/card_header">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_wire" />

            <TextView
                android:id="@+id/txt_home_wire_break"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/wire_break"
                android:textColor="@android:color/black"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_fault"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/lynxWhite"
            app:cardCornerRadius="8dp"
            app:cardElevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/card_wire_break"
            app:layout_constraintTop_toBottomOf="@id/card_header">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_close" />

            <TextView
                android:id="@+id/txt_home_fault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:text="@string/fault"
                android:textColor="@android:color/black"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>

