<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context=".PrivacyActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Privacy Policy"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Last modified: February 29, 2020 "
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="I built this fire alarm app as a Freemium app. That means this SERVICE has no cost and is intended for use as is. "
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Persnonal Information if anyone decided to use my Service. "
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="If you choose to use my Service, then yu agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and updating the data for the Service. I will not use or share your information with anyone except as described in this Privacy Policy. "
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Information Collection and Use "
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="For a better experience, while using my Service, I may require you to provide to my with your certain personal building design, including the final drawing , the design of fire alarm in your building. The information that I request will be retained by me and used as described in this privacy policy."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="The app does use third-party services that may collect information used to identify you."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Link to the privcy policy of third party service providers used by the app."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/firebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/LinkstoFirebaseAnalytics"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/arduino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/LinkstoArduinoPrivacy"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/horing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/LinkstoHoringPrivacy"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Log Data"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third-party produts) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (IP) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other information."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Cookies"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Cookies are files with a small amount of data that are commonly used as anonymous unique idenfiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="This Service does not use these Cookies explicitly. If error happens in my app, and the app collect your cookies. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Security"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="I value your trust in providing me your Personal Information, thus I am striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronics storage is 100% secure and reliable, and I cannot guarantee its absolute security."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Links to Other Sites"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="This app contains links to other sites. If you click on a third-party link, you will be directed to that site through your web browser. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="Contact Me"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me."
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/LinkstoGmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</ScrollView>